#69 Remove component Position and refactoring GameObject