@@ -3,18 +3,19 @@ package cc.abro.tow.client.tanks.enemy;
 import cc.abro.orchengine.gameobject.GameObject;
 import cc.abro.orchengine.gameobject.components.Collision;
 import cc.abro.orchengine.gameobject.components.Movement;
-import cc.abro.orchengine.gameobject.components.Position;
 import cc.abro.orchengine.gameobject.components.render.AnimationRender;
 import cc.abro.orchengine.resources.animations.Animation;
 
-import java.util.Arrays;
+import java.util.List;
 
 public class EnemyArmor extends GameObject {
 
     public Enemy enemy;
 
     public EnemyArmor(int x, int y, double direction, int z, Animation animation, Enemy enemy) {
-        super(enemy.getLocation(), Arrays.asList(new Position(x, y, z, (int) direction), new AnimationRender(animation.textures())));
+        super(enemy.getLocation(), x, y, z,
+                List.of(new AnimationRender(animation.textures())));
+        setDirection(direction);
         this.enemy = enemy;
 
         addComponent(new Movement());
